--- a/Preamble3.qmd
+++ b/Preamble3.qmd
@@ -70,7 +70,7 @@ This is the same whether in PyTorch, Keras, torch for R, or JAX — only the **s
 
 These scripts then all contain the folloing structural elements related tot the model, and to the optimisatino of the model given data:
 
-Model definition: This is where the architecture of the neural network is specified, including how inputs are transformed through layers to produce outputs. Forward pass: In this step, input data is passed through the model to compute predictions based on the current weights. Loss computation: The model's predictions are compared to the true target values using a loss function that quantifies the prediction error. Backpropagation: The gradients of the loss with respect to each model parameter are calculated by propagating the error backward through the network. Weight updates: The model’s parameters are adjusted using an optimization algorithm (like stochastic gradient descent) to reduce the loss in future predictions.
+*Model definition:* This is where the architecture of the neural network is specified, including how inputs are transformed through layers to produce outputs. Forward pass: In this step, input data is passed through the model to compute predictions based on the current weights. *Loss computation:* The model's predictions are compared to the true target values using a loss function that quantifies the prediction error. *Backpropagation:* The gradients of the loss with respect to each model parameter are calculated by propagating the error backward through the network. *Weight updates:* The model’s parameters are adjusted using an optimization algorithm (like stochastic gradient descent) to reduce the loss in future predictions.
 
 ::: panel-tabset
 ## PyTorch (Python)
@@ -207,4 +207,4 @@ for x, y in data:
 ```
 :::
 
-The models clearly are the same, and the different frameworks/languages vary in their verbosity, switching form one to the other will make you stumble, but its not as insurmountable as many people believe.
+The models clearly are the same, and the different frameworks/languages vary in their verbosity, in keras in R is only a few lines, many common operations such as mean square error loss (mse) are baked in, while in JAX things are defined more manually. I feel very comfortable with `PyTorch` myself and it does have a wide user base in the language/sequence/image deep-learing communities which means there is a lot of great code available. Switching form one to the other will make you stumble, but its not as insurmountable as many people believe.
