--- a/Chapter4_Proteins.qmd
+++ b/Chapter4_Proteins.qmd
@@ -70,7 +70,7 @@ This is structurally similar to the sample covariance matrix, where Z is an n (p
 
 $$\text{Cov}(Z) = Z^T Z$$
 
-Note the transpose is on the other "end" of the product, but because we are computing the dependenence between a sequences of `d` tokens (rows of X), whule for covariance we compute the dependencies between `m` variables (columns of Z). The apperent reversal of the side of the equations that get transposed actually makes sense. There are obvious difference: attention obviously additional learned transformations ( $W_Q$ ) and ( $W_K$ ) and its asymmetric ($W_Q \neq W_Q$). Thus, the attention map is effectively a learned, context-specific, asymmetric version of dependence, which has analogs to a covariance matrix. Its good to remember we have abstracted away the role of the softmax normalization and the $V$ matrix in service of illustrating how attention is a little bit like very dynamic context specific, and asymmetric covariance
+Note the transpose is on the other "end" of the product, but because we are computing the dependenence between a sequences of `d` tokens (rows of X), whule for covariance we compute the dependencies between `m` variables (columns of Z), the apperent reversal of the side of the equations that get transposed actually makes sense. There are obvious difference: attention obviously additional learned transformations ( $W_Q$ ) and ( $W_K$ ) and its asymmetric ($W_Q \neq W_Q$). Thus, the attention map is effectively a learned, context-specific, asymmetric version of dependence, which has analogs to a covariance matrix. Its good to remember we have abstracted away the role of the softmax normalization and the $V$ matrix in service of illustrating how attention is a little bit like very dynamic context specific, and asymmetric covariance
 
 The global attention map across a model is not a simple sum of all the attention maps from different heads. Instead, `h` attention heads operate in parallel, each computing a separate attention matrix ($A_h$), and their outputs are concatenated and linearly projected rather than summed. However, each individual attention map can often be viewed as a specific conditional relation or dependence in the data.
 
