more spelling stuff...

--- a/Chapter3_Proteins.qmd
+++ b/Chapter3_Proteins.qmd
@@ -211,7 +211,7 @@ Its interesting to note that the GCPR-Bert training loss is lower then that of m
 ## Homework
 
 ::: callout-tip
-Cheng et. all reveal something profound about model loss and scientits's goals. The loss isn't a direct measure of the modle's quality for your specific goals. If you are to design a protein language model for a specific tasks (predict the fold of human proteins after mutation for example) then you have to design validation accordingly. We read in this chapter, and last, that because we are running out of animal and plant reference protein data people include meta-genomic protein data is training. Thets probably a great idea, but its worth considering weather for YOUR downstream tasks it is. ESM3 is better then ESM2, is its trained on way more data, but is it better for *your* applications?
+Cheng et al. reveal something profound about model loss and scientist's goalsin their analysis. The loss isn't a direct measure of the model's quality for your specific goals. If you are to design a protein language model for a specific tasks (predict the fold of human proteins after mutation for example) then you have to design validation accordingly. As we read in this chapter, and last, that we are running out of animal and plant reference protein data to train protein language models, people have therefore started too include meta-genomic protein data is training. Thets probably a great idea, but its worth considering weather for YOUR downstream tasks it is. ESM3 is better then ESM2, is its trained on way more data, but is it better for *your* applications?
 
 An interesting unsolved issue to work on in protein model training is how to introduce low diversity but critical protein data in training. We saw models do well on diverse data, but what if we want to introduce data from many individual humans, with disease status as meta info for example, that would be very low diversity data. But the diversity that does exists tells us important things about what variation is, and isn't tolerated. We need ways to fine-tune a pre-trained models on high value but low diversity data without reducing the models performance. would you reduce the learnign rate, would you mix in very diverse sequences? Would you freeze parts of the model in place?
 :::
