--- a/references.bib
+++ b/references.bib
@@ -606,3 +606,54 @@
 	url = {http://dx.doi.org/10.1016/j.csbj.2024.06.021},
 	langid = {en}
 }
+
+@misc{Tang2024,
+	title = {Evaluating the representational power of pre-trained DNA language models for regulatory genomics},
+	author = {Tang, Ziqi and Somia, Nirali and Yu, Yiyang and Koo, Peter K},
+	year = {2024},
+	month = {03},
+	date = {2024-03-04},
+	url = {http://dx.doi.org/10.1101/2024.02.29.582810}
+}
+
+@article{patel2024a,
+	title = {DART-Eval: A Comprehensive DNA Language Model Evaluation Benchmark on Regulatory DNA},
+	author = {Patel, Aman and Singhal, Arpita and Wang, Austin and Pampari, Anusri and Kasowski, Maya and Kundaje, Anshul},
+	year = {2024},
+	date = {2024},
+	doi = {10.48550/ARXIV.2412.05430},
+	url = {https://arxiv.org/abs/2412.05430}
+}
+
+@article{marin2023,
+	title = {BEND: Benchmarking DNA Language Models on biologically meaningful tasks},
+	author = {Marin, Frederikke Isa and Teufel, Felix and Horlacher, Marc and Madsen, Dennis and Pultz, Dennis and Winther, Ole and Boomsma, Wouter},
+	year = {2023},
+	date = {2023},
+	doi = {10.48550/ARXIV.2311.12570},
+	url = {https://arxiv.org/abs/2311.12570}
+}
+
+@article{schubach2024,
+	title = {CADD v1.7: using protein language models, regulatory CNNs and other nucleotide-level scores to improve genome-wide variant predictions},
+	author = {Schubach, Max and Maass, Thorben and Nazaretyan, {Lusiné} and {Röner}, Sebastian and Kircher, Martin},
+	year = {2024},
+	month = {01},
+	date = {2024-01-05},
+	journal = {Nucleic Acids Research},
+	pages = {D1143--D1154},
+	volume = {52},
+	number = {D1},
+	doi = {10.1093/nar/gkad989},
+	url = {http://dx.doi.org/10.1093/nar/gkad989},
+	langid = {en}
+}
+
+@misc{ljungdahl2023,
+	title = {AlphaMissense is better correlated with functional assays of missense impact than earlier prediction algorithms},
+	author = {Ljungdahl, Alicia and Kohani, Sayeh and Page, Nicholas F. and Wells, Eloise S. and Wigdor, Emilie M. and Dong, Shan and Sanders, Stephan J.},
+	year = {2023},
+	month = {10},
+	date = {2023-10-27},
+	url = {http://dx.doi.org/10.1101/2023.10.24.562294}
+}
